# Database_Tests

./: .gitignore  SolaraTranscript_Page.py  Solara_EditableTable.py  Solara_ModelForm.py  Solara_Table.py  alembic.ini  generic_form_from_sqlmodel.py  main.py  models.py  pyproject.toml  render_ui_fields.py  setup_database.py  sol.py  sol_test_many_features.py  solara_load_data.py  streamlit_generic_form.py  streamlit_main.py  streamlit_person_view.py  streamlit_project_view.py  streamlit_setup_database.py  streamlit_show_all_info.py  streamlit_task_view.py
alembic/: env.py
alembic/versions/: 1a893e55f04a_added_project_to_task.py  f88a7b660150_initial_models.py
