[project]
name = "test-database"
version = "0.1.0"
description = ""
authors = [
    {name = "ian-james",email = "jamey.fraser@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "fastapi (>=0.115.12,<0.116.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "typer (>=0.16.0,<0.17.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "pendulum (>=3.1.0,<4.0.0)",
    "solara (>=1.48.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.34.3"}
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
httpx = "^0.28.1"
black = "^25.1.0"
mypy = "^1.16.0"
pre-commit = "^4.2.0"

